public/stylesheets/default.css
/* Fonts
-------------------------------*/
@font-face {
	src: url('../fonts/open-sans/regular.woff') format('woff');
	font-family: Open Sans;
	font-style: normal;
	font-weight: normal;
}

@font-face {
	src: url('../fonts/open-sans/light.woff') format('woff');
	font-family: Open Sans;
	font-style: normal;
	font-weight: 300;
}

@font-face {
	src: url('../fonts/open-sans/semibold.woff') format('woff');
	font-family: Open Sans;
	font-style: normal;
	font-weight: 600;
}

@font-face {
	src: url('../fonts/open-sans/bold.woff') format('woff');
	font-family: Open Sans;
	font-style: normal;
	font-weight: 700;
}

/* Reset
-------------------------------*/
::-moz-focus-inner {
	border: none;
	padding: 0;
}

ul { 
	list-style: none; 
	margin: 0; 
	padding: 0;
}

/* General
-------------------------------*/
html {
	min-height: 100%;
	position: relative;
}

body {
	background-color: #323539;
	color: #ccc;
	font-family: Open Sans, sans-serif;
	font-size: 12pt;
	margin: 0;
	padding-bottom: 6.25em;
}

a {
	color: #ccc;
	text-decoration: none;
}

dd {
	margin-left:10px;
}

dd,dt {
	float:left;
}

dd.new-line {
	clear:left;
	margin-left:0;
}

dl {
	margin:0 0 0 10px;
	overflow:auto;
}

dl.to-the-right dd {
	float:right;
	margin:0;
}

dt {
	clear:left;
}

/* Interactive
-------------------------------*/
.button {
	background-color: #344f75;
	border: none;
	border-radius: 0.2em;
	color: #e4e4e4;
	cursor: pointer;
	display: inline-block;
	font-family: Open Sans, sans-serif;
	font-size: 1em;
	line-height: 2.5;
	margin: 0;
	outline: none;
	padding: 0 1.2em;
}

.button.primary {
	background-color: #345a1f;
}

form:invalid .submit {
	background-color: #999;
	color: #444;
	cursor: not-allowed;
}

.field {
	display: block;
	margin: 0.8em 0;
}

.option {
	display: block;
	margin: 1.2em 0;
}

.option > input {
	left: -9999px;
	position: absolute;
}

.option h4 {
	background-image: url('../images/checkbox-off.png');
	background-position: 0 center;
	background-repeat: no-repeat;
	color: white;
	font-size: 1.1em;
	font-weight: 300;
	line-height: 1.6;
	margin: 0;
	margin-left: -2.8em;
	padding-left: 2.8em;
}

.option :checked + .label h4 {
	background-image: url('../images/checkbox-on.png');
}

.option .label {
	padding-left: 3.4em;
}

.option p {
	color: #999;
	font-size: 0.9em;
	font-weight: 300;
	margin-top: 0.2em;
}

.text {
	background-color: #4f545a;
	border: none;
	border-radius: 0.2em;
	box-sizing: border-box;
	color: white;
	font-family: Open Sans, sans-serif;
	font-size: 1em;
	padding: 0.4em 0.6em;
	vertical-align: middle;
}

textarea.text {
	min-height: 2.2em;
	resize: vertical;
}

.file-upload {
	border: 0.2em dashed #999;
	border-radius: 0.4em;
	display: block;
	cursor: pointer;
	margin: 1em 0;
	max-width: 30em;
	padding: 1em;
	text-align: center;
}

.file-upload .label {
	color: white;
	display: block;
	font-size: 1.3em;
	margin-bottom: 0.6em;
}

/* Images
-------------------------------*/

a.avatar,a.thumbnail,a.preview,span.avatar,span.thumbnail,span.preview {
	-moz-background-size:contain;
	-o-background-size:contain;
	-webkit-background-size:contain;
	background:url() transparent no-repeat center center;
	background-size:contain;
	display:inline-block;
}

a.thumbnail {
	border-bottom:6px solid #000;
}

a.thumbnail.rating-selected {
	border-color:#fff;
}

a.thumbnail.rating-general {
	border-color:red;
}

a.thumbnail.reating-mature {
	border-color:#0f0;
}

a.thumbnail.rating-adult {
	border-color:#00f;
}

a.avatar.small,span.avatar.small,a.thumbnail.small,span.thumbnail.small {
	height:20px;
	width:20px;
}

a.avatar.medium,span.avatar.medium,a.thumbnail.medium,span.thumbnail.medium {
	height:50px;
	width:50px;
}

a.avatar.large,span.avatar.large,a.thumbnail.large,span.thumbnail.large {
	height:100px;
	width:100px;
}

/* Social
-------------------------------*/
span.social {
	background: transparent url('../images/social-icons.png') no-repeat left top;
	display: inline-block; 
	height: 32px; 
	overflow: hidden;
	text-indent: 100%;
	white-space: nowrap;
	width: 32px; 
}

/* TODO replace these I got from http://designdeck.co.uk/a/1252 */
span.social.with-label {

	line-height: 32px;
	overflow: visible;
	padding-left: 42px;
	text-indent: 0;
	white-space: normal;
	width: auto;

}

span.social.social-aim{ background-position: 0 0; } 
span.social.social-behance{ background-position: 0 -82px; } 
span.social.social-digg{ background-position: 0 -164px; } 
span.social.social-dribbble{ background-position: 0 -246px; } 
span.social.social-ember{ background-position: 0 -328px; } 
span.social.social-evernote{ background-position: 0 -410px; } 
span.social.social-facebook{ background-position: 0 -492px; } 
span.social.social-flickr{ background-position: 0 -574px; } 
span.social.social-forrst{ background-position: 0 -656px; } 
span.social.social-github{ background-position: 0 -738px; } 
span.social.social-google{ background-position: 0 -820px; } 
span.social.social-last-fm{ background-position: 0 -902px; } 
span.social.social-linkedin{ background-position: 0 -984px; } 
span.social.social-paypal{ background-position: 0 -1066px; } 
span.social.social-rss{ background-position: 0 -1148px; } 
span.social.social-sharethis{ background-position: 0 -1230px; } 
span.social.social-skype{ background-position: 0 -1312px; } 
span.social.social-tumblr{ background-position: 0 -1394px; } 
span.social.social-twitter{ background-position: 0 -1476px; } 
span.social.social-vimeo{ background-position: 0 -1558px; } 
span.social.social-wordpress{ background-position: 0 -1640px; } 
span.social.social-yahoo{ background-position: 0 -1722px; } 
span.social.social-youtube{ background-position: 0 -1804px; } 
.social.social-zerply{ background-position: 0 -1886px; } 



/* Header
-------------------------------*/
#title {
	background-image: url('../images/banner.jpg');
	font-weight: 300;
	letter-spacing: 0.1em;
	line-height: 90px;
	margin: 0;
	padding: 0 0.7em;
	text-transform: uppercase;
}

#logo {
	margin-right: 0.4em;
	vertical-align: middle;
}

/* Navigation
-------------------------------*/
nav {
	display: flex;
}

nav ul {
	list-style: none;
	margin: 0;
	padding: 0;
}

nav ul:first-of-type {
	display: flex;
	flex: 0 auto;
}

nav ul+ul {
	display: flex;
	flex: 1;
	flex-flow: row wrap;
	justify-content: flex-end;
}

nav a, #log-out {
	display: inline-block;
	padding: 0.725em 1.125em;
}

#main-navigation, 
#user-navigation {
	background-color: #121416;
}

#log-out {
	background-color: #792f1d;
	border: none;
	color: #ccc;
	cursor: pointer;
	font: inherit;
	margin: 0;
}

/* Notification bar
-------------------------------*/
#notifications {
	background-color: #314753;
	list-style: none;
	font-size: 0.95em;
	margin: 0;
	text-align: right;
}

#notifications li {
	display: inline-block;
}

#notifications a {
	display: inline-block;
	line-height: 2.95;
	padding: 0 1em;
}

.content a:hover {
	color: #466995;
}

.notification-header {
	background-color: #151717;
	font-size: 24px;
	line-height: 40px;
	height: 60px;
	padding: 10px 10px 0 25px;
	overflow: hidden;
	border-radius: 8px 8px 0 0;
	min-width: 830px;
}

/* Content
-------------------------------*/
#main {

	padding-bottom: 6.25em;

}

/* Footer
-------------------------------*/
#footer {
	background-color: #121416;
	bottom: 0;
	color: #bbb;
	font-size: 0.8em;
	left: 0;
	margin-top:;
	padding: 1.5em;
	position: absolute;
	right: 0;
}

#footer a {
	color: inherit;
}

#footer-navigation {
	list-style: none;
	margin: 0;
	padding: 0;
}

#footer-navigation li {
	display: inline-block;
}

#footer-navigation li + li::before {
	content: '|';
	margin: 0 0.4em;
}

